--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,32 +12,30 @@
         android:orientation="vertical"
         android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
-        tools:ignore="MissingConstraints"/>
+        tools:ignore="MissingConstraints">
 
         <TextView
-            android:id="@+id/TextView"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:padding="5dp"
-            android:text="Data Pemain Madrid"
+            android:text="Data Pemain Madrid Real Madrid FC"
             android:textAlignment="center"
             android:textSize="19sp"
-            android:textColor="#0C0C00"
+            android:textColor="#0C0C0C"
             android:layout_gravity="center_horizontal"
-            tools:ignore="MissingConstraints" />
+            />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:listitem="@layout/list_item_pemain"
         android:layout_marginTop="40dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-
-        tools:ignore="MissingConstraints" />
-
-
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
